--- a/experience.html
+++ b/experience.html
@@ -18,28 +18,25 @@
 
     <header>
       <img src="images/_Y1H7590.jpg" alt="Aaron Profile Picture" class="profile-image">
-      <h1 class="tag name">Hello, I’m Aaron.</h1>
-      <p class="tag location">My home is Ballymena, Northern Ireland.</p>
+      <h1 class="tag name">Experience</h1>
     </header>
 
     <main class="flex">
       <div class="card">
-        <h2>Background</h2>
-        <p>I’m an aspiring web designer who loves everything about the web. I'm really looking forward to developing my front end web development skills. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
-        <p>I am a life-long learner who's always interested in expanding my skills. Outside of work I enjoy watching sport and going to the gym.</p>
+        <h2>Experience</h2>
+        <p>I studied a degree in Business Studies at the university of Ulster. My career experiences to date has been working in the finance sector.</p>
       </div> 
 
       <div class="card">
         <h2>Goals</h2>
-        <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+        <p>I want to complete my front end develpment TechDegree with Team Treehouse. The skills which I would like to learn in the next few months include:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
           <li>GitHub</li>
-          <li>Node</li>
         </ul>
-        <p>I’d like to develop my Front End Web Development skills and continue to learn new skills. </p>
+        <p>After I finish the TechDegree I would like work as a front end developer on projects. </p>
       </div> 
 
     </main>
