Additional changes to Master

--- a/hobbies.html
+++ b/hobbies.html
@@ -18,8 +18,8 @@
     </div>
 
     <header>
-      <img src="images/javascript.jpg" alt="Aaron Profile Picture" class="profile-image">
-      <h1 class="tag name">Experience</h1>
+      <img src="images/PL-Lion.png" alt="Premier League" class="profile-image">
+      <h1 class="tag name">Premier League</h1>
     </header>
 
     <main class="flex">
