Section tag added

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
         <p>I am a life-long learner who's always interested in expanding my skills. Outside of work I enjoy watching sport and going to the gym.</p>
       </div> 
 
-      <div class="card">
-        <section>
+      <div class="section">
         <h2>Goals</h2>
         <img src="images/star-face.png" alt="Star Face">
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
@@ -45,7 +44,6 @@
           <li>GitHub</li>
         </ul>
         <p>I’d like to develop my Front End Web Development skills and continue to learn new skills. </p>
-        </section>
       </div> 
 
     </main>
