Revert "Section tag added"
This reverts commit 54326f41d022e1a7956baf5cedf306fb2aa53318.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <p>I am a life-long learner who's always interested in expanding my skills. Outside of work I enjoy watching sport and going to the gym.</p>
       </div> 
 
-      <div class="section">
+      <div class="card">
+        <section>
         <h2>Goals</h2>
         <img src="images/star-face.png" alt="Star Face">
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
@@ -44,6 +45,7 @@
           <li>GitHub</li>
         </ul>
         <p>I’d like to develop my Front End Web Development skills and continue to learn new skills. </p>
+        </section>
       </div> 
 
     </main>
