Revert "Additional changes to Master"
This reverts commit 6d386f3b685e98fb7791f997fdb95853fd11c588.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
   <body>
 
     <div class="main-nav">
-      <nav>
-      <ul class="nav">
-        <li class="name">Aaron Foster</li>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="experience.html">Experience</a></li>
-        <li><a href="hobbies.html">Hobbies</a></li>
-      </ul>
-      </nav>
-  </div>
+        <ul class="nav">
+          <li class="name">Aaron Foster</li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="experience.html">Experience</a></li>
+        </ul>
+    </div>
 
     <header>
       <img src="images/_Y1H7590.jpg" alt="Aaron Profile Picture" class="profile-image">
@@ -28,24 +25,21 @@
     <main class="flex">
       <div class="card">
         <h2>Background</h2>
-        <img src="images/grinning-face.png" alt="Grinning Face">
         <p>I’m an aspiring web designer who loves everything about the web. I'm really looking forward to developing my front end web development skills. I’m excited to bring my life experience to the process of building fantastic looking websites.</p>
         <p>I am a life-long learner who's always interested in expanding my skills. Outside of work I enjoy watching sport and going to the gym.</p>
       </div> 
 
       <div class="card">
-        <section>
         <h2>Goals</h2>
-        <img src="images/star-face.png" alt="Star Face">
         <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
         <ul class="skills">
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
           <li>GitHub</li>
+          <li>Node</li>
         </ul>
         <p>I’d like to develop my Front End Web Development skills and continue to learn new skills. </p>
-        </section>
       </div> 
 
     </main>
