--- a/experience.html
+++ b/experience.html
@@ -13,12 +13,11 @@
           <li class="name">Aaron Foster</li>
           <li><a href="index.html">Home</a></li>
           <li><a href="experience.html">Experience</a></li>
-          <li><a href="hobbies.html">Hobbies</a></li>
         </ul>
     </div>
 
     <header>
-      <img src="images/javascript.jpg" alt="Aaron Profile Picture" class="profile-image">
+      <img src="images/_Y1H7590.jpg" alt="Aaron Profile Picture" class="profile-image">
       <h1 class="tag name">Experience</h1>
     </header>
 
